fix(button): disabled on safari

--- a/src/index.css
+++ b/src/index.css
@@ -65,10 +65,6 @@ button {
   cursor: pointer;
 }
 
-.button:disabled {
-  opacity: 0.65;
-}
-
 .material-symbols-outlined.stats {
   font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 20;
   font-size: 3rem;
